--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ h1 {
 h2 {
 	font-size: 1.2rem;
 	text-transform: uppercase;
-	border-top: 1px solid #888;
 	border-bottom: 1px solid #888;
 	padding: 0.75rem 0;
 	margin-bottom: 2rem;
@@ -129,6 +128,25 @@ ul {
 	max-width: 1000px;
 	margin: auto;
 }
+
+.skills ul li h3 {
+	margin-bottom: 10px;
+}
+
+.skills ul li ul li {
+	margin-left: 15px;
+	list-style:square;
+	margin-bottom: 10px;
+}
+
+
+.online.education li {
+	margin-left: 15px;
+	list-style:square;
+	margin-bottom: 10px;
+}
+
+
 
 footer {
 	margin: auto;
