--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 	background-image: url(pattern.svg);
 	background-size: 500px;
 	background-attachment: fixed;
+	background-color: #8585851a;
 }
 
 h1 {
@@ -62,10 +63,12 @@ ul {
 	text-align: center;
 }
 
-.profile img {
+.student_pic {
 	border-radius: 50%;
 	max-width: 250px;
+	margin-top: 15px;
 }
+
 
 .profile p {
 	color: #888;
